src/widget/tests/snapshots/masonry__widget__tests__lifecycle_basic__adding_child.snap
---
source: masonry/src/widget/tests/lifecycle_basic.rs
expression: record_new_child

---
[
    L(
        WidgetAdded,
    ),
    L(
        BuildFocusChain,
    ),
    Layout(
        4.0W×18.0H,
    ),
    L(
        Internal(
            ParentWindowOrigin,
        ),
    ),
]
