src/widget/tests/snapshots/masonry__widget__tests__lifecycle_basic__app_creation.snap
---
source: masonry/src/widget/tests/lifecycle_basic.rs
expression: record

---
[
    L(
        WidgetAdded,
    ),
    L(
        BuildFocusChain,
    ),
    E(
        WindowConnected,
    ),
    Layout(
        0.0W×0.0H,
    ),
    L(
        Internal(
            ParentWindowOrigin,
        ),
    ),
    E(
        WindowSize(
            400.0W×400.0H,
        ),
    ),
    Layout(
        400.0W×400.0H,
    ),
    L(
        Internal(
            ParentWindowOrigin,
        ),
    ),
]
